--- a/HelloWorld/app/src/main/res/values/strings.xml
+++ b/HelloWorld/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HelloWorld</string>
     <string name="action_settings">Settings</string>
+    <string name="sayHello">Say Hello!</string>
 </resources>
